# data-elevator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  data-elevator.cabal  flake.nix  upload.sh
.github/workflows/: haskell-ci.yml
src/Data/: Elevator.hs
src/Data/Elevator/: Internal.hs
test/: Issue4.hs  Main.hs
