cabal-version:      2.4
name:               data-elevator
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Coerce between unlifted boxed and lifted types.

-- A longer description of the package.
description: Near zero-cost coercions between unlifted boxed and lifted types.

             There are 3 main ingredients to this library:
             A newtype `Strict :: LiftedType -> UnliftedType`,
             a newtype `Lazy :: UnliftedType -> LiftedType`
             and a coercion function `levCoerce` to coerce existing functions
             into accepting `Strict` wrapper

-- A URL where users can report bugs.
bug-reports:

-- The license under which the package is released.
license: MIT

-- The package author(s).
author: Sebastian Graf

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: sgraf1337@gmail.com

-- A copyright notice.
copyright: 2022
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data.Elevator
                      Data.Elevator.Internal

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite data-elevator-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    -- hs-source-dirs:
    main-is:          Main.hs
    hs-source-dirs:   test
    build-depends:    base ^>=4.16
                    , data-elevator
                    , hspec
